# StillfrontTestTask

./: .dockerignore  .env.default  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: api.py  logger.py  main.py
app/db/: __init__.py  config.py  database.py  models.py
app/scheduler/: celery.py  tasks.py
migrations/: env.py
migrations/versions/: f1c31665b755_add_table_rates.py
