[project]
name = "stillfronttesttask"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksandrZhukovin",email = "sashokzuk@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.8"
dependencies = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
